force-app/main/default/objects/webkul_wws__woo_commerce_categories__c/webkul_wws__woo_commerce_categories__c.object-meta.xml
<CustomObject>
    <label>WooCommerce Categories</label>
    <nameField>
        <label>woo commerce categories Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WooCommerce Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>