force-app/main/default/objects/webkul_wws__woo_commerce_categories__c/fields/webkul_wws__Category_Id__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Category_Id__c</fullName>
    <externalId>true</externalId>
    <label>Category Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>