force-app/main/default/objects/webkul_wws__woo_commerce_categories__c/fields/webkul_wws__Category_Level__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Category_Level__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Category Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>