force-app/main/default/objects/webkul_wws__woo_commerce_categories__c/fields/webkul_wws__Description__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>