force-app/main/default/objects/webkul_wws__woo_commerce_categories__c/fields/webkul_wws__eShopSync_Config__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__eShopSync_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>eShopSync Config</label>
    <referenceTo>webkul_wws__eshop_sync__c</referenceTo>
    <relationshipName>woo_commerce_categories</relationshipName>
    <type>Lookup</type>
</CustomField>