force-app/main/default/objects/webkul_wws__woo_commerce_categories__c/fields/webkul_wws__Image_ID__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Image_ID__c</fullName>
    <label>Image ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>