force-app/main/default/objects/webkul_wws__woo_commerce_categories__c/fields/webkul_wws__Parent_category__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Parent_category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent category</label>
    <referenceTo>webkul_wws__woo_commerce_categories__c</referenceTo>
    <relationshipName>parent_category</relationshipName>
    <type>Lookup</type>
</CustomField>