force-app/main/default/objects/webkul_wws__woo_commerce_categories__c/fields/webkul_wws__Slug__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__Slug__c</fullName>
    <label>Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>