force-app/main/default/objects/webkul_wws__woo_commerce_categories__c/fields/webkul_wws__woo_category_id__c.field-meta.xml
<CustomField>
    <fullName>webkul_wws__woo_category_id__c</fullName>
    <externalId>true</externalId>
    <label>woo category id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>