force-app/main/default/objects/webkul_wws__woo_commerce_categories__c/validationRules/webkul_wws__Category_Insert_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>webkul_wws__Category_Insert_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISNULL(webkul_wws__eShopSync_Config__c), NOT(CONTAINS( webkul_wws__Category_Id__c , webkul_wws__eShopSync_Config__r.webkul_wws__Store_Unique_Code__c )))</errorConditionFormula>
    <errorMessage>Syncing from this site not allowed.</errorMessage>
</ValidationRule>